Resolves: tdf#98425 gtk3: grab the SolarMutex when setting the clipboard

Change-Id: Ic439affbd69532534f5caf82a743786d5975939e